--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "@fingerprintjs/library-template-typescript",
+  "name": "flow-cloudflare-worker",
   "version": "0.0.1",
-  "description": "Typescript library template project",
+  "description": "Cloudflare Worker for Flow",
   "author": "FingerprintJS, Inc (https://fingerprint.com)",
   "license": "MIT",
+  "private": true,
   "repository": {
     "type": "git",
     "url": "https://github.com/fingerprintjs/library-template-typescript.git"
@@ -25,10 +26,6 @@
   "files": [
     "dist"
   ],
-  "publishConfig": {
-    "access": "public",
-    "registry": "https://registry.npmjs.org/"
-  },
   "lint-staged": {
     "*.{js,ts}": "pnpm run lint:fix"
   },
@@ -45,22 +42,23 @@
     "@fingerprintjs/prettier-config-dx-team": "^0.2.0",
     "@fingerprintjs/tsconfig-dx-team": "^0.0.2",
     "@rollup/plugin-json": "^6.1.0",
-    "@rollup/plugin-typescript": "^12.1.2",
-    "@types/jest": "^29.5.14",
-    "@types/node": "^20.11.27",
+    "@rollup/plugin-typescript": "^12.1.4",
+    "@types/jest": "^30.0.0",
+    "@types/node": "^24.5.2",
     "commitizen": "^4.3.1",
     "cz-conventional-changelog": "^3.3.0",
     "husky": "^9.1.7",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "lint-staged": "^15.5.0",
+    "jest": "^30.1.3",
+    "jest-environment-jsdom": "^30.1.2",
+    "lint-staged": "^16.2.0",
+    "prettier": "^3.6.2",
     "rimraf": "^5.0.5",
-    "rollup": "^4.38.0",
-    "rollup-plugin-dts": "^6.2.1",
+    "rollup": "^4.52.2",
+    "rollup-plugin-dts": "^6.2.3",
     "rollup-plugin-license": "^3.6.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
-    "ts-jest": "^29.3.0",
-    "typedoc": "^0.28.1",
-    "typescript": "^5.8.2"
+    "ts-jest": "^29.4.4",
+    "typedoc": "^0.28.13",
+    "typescript": "^5.9.2"
   }
 }
