--- a/package.json
+++ b/package.json
@@ -5,23 +5,26 @@
   "author": "FingerprintJS, Inc (https://fingerprint.com)",
   "license": "MIT",
   "private": true,
+  "type": "module",
   "repository": {
     "type": "git",
     "url": "https://github.com/fingerprintjs/library-template-typescript.git"
   },
   "scripts": {
-    "prepare": "husky",
-    "build": "rimraf dist && rollup -c rollup.config.js --bundleConfigAsCjs",
+    "serve": "vite",
+    "prepare": "husky && pnpm build:injector",
+    "build": "vite build",
+    "build:injector": "vite build --config vite.injector.ts",
     "lint": "eslint --ext .js,.ts --ignore-path .gitignore --max-warnings 0 .",
     "lint:fix": "yarn lint --fix",
     "test": "jest",
     "test:coverage": "jest --coverage",
-    "test:dts": "tsc --noEmit --isolatedModules dist/template-ts.d.ts",
-    "docs": "typedoc src/index.ts --out docs"
+    "test:typecheck": "tsc -p tsconfig.typecheck.json",
+    "wrangler:deploy": "pnpm build && wrangler deploy"
   },
-  "main": "dist/template-ts.cjs.js",
-  "module": "dist/template-ts.esm.js",
-  "types": "dist/template-ts.d.ts",
+  "main": "dist/flow-cloudflare-worker.cjs.js",
+  "module": "dist/flow-cloudflare-worker.esm.js",
+  "types": "dist/flow-cloudflare-worker.d.ts",
   "sideEffects": false,
   "files": [
     "dist"
@@ -35,30 +38,23 @@
     }
   },
   "devDependencies": {
+    "@cloudflare/vite-plugin": "^1.13.3",
+    "@cloudflare/workers-types": "^4.20250923.0",
     "@commitlint/cli": "^19.8.0",
     "@fingerprintjs/commit-lint-dx-team": "^0.1.0",
     "@fingerprintjs/conventional-changelog-dx-team": "^0.1.0",
     "@fingerprintjs/eslint-config-dx-team": "^0.1.0",
     "@fingerprintjs/prettier-config-dx-team": "^0.2.0",
     "@fingerprintjs/tsconfig-dx-team": "^0.0.2",
-    "@rollup/plugin-json": "^6.1.0",
-    "@rollup/plugin-typescript": "^12.1.4",
-    "@types/jest": "^30.0.0",
     "@types/node": "^24.5.2",
     "commitizen": "^4.3.1",
     "cz-conventional-changelog": "^3.3.0",
     "husky": "^9.1.7",
-    "jest": "^30.1.3",
-    "jest-environment-jsdom": "^30.1.2",
     "lint-staged": "^16.2.0",
     "prettier": "^3.6.2",
     "rimraf": "^5.0.5",
-    "rollup": "^4.52.2",
-    "rollup-plugin-dts": "^6.2.3",
-    "rollup-plugin-license": "^3.6.0",
-    "rollup-plugin-peer-deps-external": "^2.2.4",
-    "ts-jest": "^29.4.4",
-    "typedoc": "^0.28.13",
-    "typescript": "^5.9.2"
+    "typescript": "^5.9.2",
+    "vite": "^7.1.7",
+    "vitest": "^3.2.4"
   }
 }
