--- a/package.json
+++ b/package.json
@@ -13,13 +13,12 @@
   "scripts": {
     "serve": "vite",
     "prepare": "husky && pnpm build:injector",
-    "build": "vite build",
+    "build:worker": "vite build --config vite.worker.ts",
     "build:injector": "vite build --config vite.injector.ts",
     "lint": "eslint --ext .js,.ts --ignore-path .gitignore --max-warnings 0 .",
     "lint:fix": "yarn lint --fix",
     "test": "jest",
     "test:coverage": "jest --coverage",
-    "test:typecheck": "tsc -p tsconfig.typecheck.json",
     "wrangler:deploy": "pnpm build && wrangler deploy"
   },
   "main": "dist/flow-cloudflare-worker.cjs.js",
@@ -39,7 +38,6 @@
   },
   "devDependencies": {
     "@cloudflare/vite-plugin": "^1.13.3",
-    "@cloudflare/workers-types": "^4.20250923.0",
     "@commitlint/cli": "^19.8.0",
     "@fingerprintjs/commit-lint-dx-team": "^0.1.0",
     "@fingerprintjs/conventional-changelog-dx-team": "^0.1.0",
@@ -55,6 +53,7 @@
     "rimraf": "^5.0.5",
     "typescript": "^5.9.2",
     "vite": "^7.1.7",
+    "vite-plugin-checker": "^0.10.3",
     "vitest": "^3.2.4"
   }
 }
