--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,13 +4,7 @@
     "composite": true,
     "module": "es6",
     "moduleResolution": "node",
-    "target": "es2020",
-    "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.worker.tsbuildinfo",
-    "types": [
-      "@cloudflare/workers-types/2023-07-01",
-      "vite/client"
-    ],
-    "lib": ["DOM", "ES2020"]
+    "target": "es2020"
   },
   "exclude": [
     "dist",
@@ -19,10 +13,7 @@
   ],
   "references": [
     {
-      "path": "tsconfig.app.json"
-    },
-    {
-      "path": "tsconfig.typecheck.json"
+      "path": "tsconfig.worker.json"
     }
   ]
 }
