build: fix file names

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,9 @@
   "references": [
     {
       "path": "tsconfig.worker.json"
+    },
+    {
+      "path": "tsconfig.instrumentation.json"
     }
   ]
 }
