--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -20,7 +20,7 @@
     "FPJS_CDN_URL": "",
     "FPJS_INGRESS_BASE_HOST": "",
     "SCRIPTS_BEHAVIOUR_PATH": "W0cuVtnPs",
-    "PUBLIC_KEY": "",
+    "PUBLIC_KEY": "uxA8kJe9InOmy1MQz12y",
     "PROTECTION_CONFIG": {
       "identificationPageUrls": [
         "pz-fingerprint.org/"
