--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
     "serve": "vite",
     "prepare": "husky && pnpm build:injector",
     "build:worker": "vite build --config vite.worker.ts",
-    "build:injector": "vite build --config vite.injector.ts",
+    "build:injector": "vite build --config vite.instrumentation.ts",
     "lint": "eslint --ext .js,.ts --ignore-path .gitignore --max-warnings 0 .",
     "lint:fix": "yarn lint --fix",
     "test": "jest",
     "test:coverage": "jest --coverage",
-    "wrangler:deploy": "pnpm build && wrangler deploy"
+    "wrangler:deploy": "pnpm build:worker && wrangler deploy"
   },
   "main": "dist/flow-cloudflare-worker.cjs.js",
   "module": "dist/flow-cloudflare-worker.esm.js",
