test: add basic tests setup

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -14,7 +14,8 @@
     }
   ],
   "assets": {
-    "binding": "ASSETS"
+    "binding": "ASSETS",
+    "directory": "./public"
   },
   "vars": {
     "FPJS_CDN_URL": "",
