--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "lint:fix": "yarn lint --fix",
     "test": "vitest",
     "test:coverage": "vitest --coverage",
-    "wrangler:deploy": "pnpm build:worker && wrangler deploy"
+    "test:attach": "vitest --inspect=9229 --no-file-parallelism",
+    "wrangler:deploy": "pnpm build:worker && wrangler deploy",
+    "wrangler:types": "wrangler types"
   },
   "lint-staged": {
     "*.{js,ts}": "pnpm run lint:fix"
@@ -31,6 +33,7 @@
   },
   "devDependencies": {
     "@cloudflare/vite-plugin": "^1.13.3",
+    "@cloudflare/vitest-pool-workers": "^0.9.5",
     "@commitlint/cli": "^19.8.0",
     "@fingerprintjs/commit-lint-dx-team": "^0.1.0",
     "@fingerprintjs/conventional-changelog-dx-team": "^0.1.0",
