--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,4 +7,4 @@ jobs:
     name: Build project and run CI checks
     uses: fingerprintjs/dx-team-toolkit/.github/workflows/build-typescript-project.yml@v1
     with:
-      runAfterInstall: cp wrangler.dist.jsonc wrangler.toml
+      runAfterInstall: cp wrangler.dist.jsonc wrangler.jsonc
