--- a/.github/workflows/docs-and-coverage.yml
+++ b/.github/workflows/docs-and-coverage.yml
@@ -11,4 +11,4 @@ jobs:
     uses: fingerprintjs/dx-team-toolkit/.github/workflows/docs-and-coverage.yml@v1
     with:
       skip-docs-step: true
-      run-after-install: cp wrangler.dist.jsonc wrangler.toml
+      run-after-install: cp wrangler.dist.jsonc wrangler.jsonc
