chore: fix lint

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "build:worker": "vite build --config vite.worker.ts",
     "build:injector": "vite build --config vite.instrumentation.ts",
     "lint": "eslint --ext .js,.ts --ignore-path .gitignore --max-warnings 0 .",
-    "lint:fix": "yarn lint --fix",
+    "lint:fix": "pnpm lint --fix",
     "test": "vitest",
     "test:coverage": "vitest --coverage",
     "test:attach": "vitest --inspect=9229 --no-file-parallelism",
@@ -42,9 +42,11 @@
     "@fingerprintjs/prettier-config-dx-team": "^0.2.0",
     "@fingerprintjs/tsconfig-dx-team": "^0.0.2",
     "@types/node": "^24.5.2",
+    "@typescript-eslint/eslint-plugin": "6.19.1",
     "@vitest/coverage-v8": "^3.2.4",
     "commitizen": "^4.3.1",
     "cz-conventional-changelog": "^3.3.0",
+    "eslint": "^8.57.1",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.0",
     "prettier": "^3.6.2",
