chore: skip types check

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,3 +8,4 @@ jobs:
     uses: fingerprintjs/dx-team-toolkit/.github/workflows/build-typescript-project.yml@v1
     with:
       runAfterInstall: cp wrangler.dist.jsonc wrangler.jsonc
+      checkTypes: 'false'
