--- a/tsconfig.instrumentation.json
+++ b/tsconfig.instrumentation.json
@@ -2,7 +2,7 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "moduleResolution": "bundler",
-    "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.injector.tsbuildinfo",
+    "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.instrumentation.tsbuildinfo",
     "lib": [
       "DOM",
       "ES2020"
