--- a/tsconfig.instrumentation.json
+++ b/tsconfig.instrumentation.json
@@ -14,6 +14,7 @@
     "isolatedModules": true
   },
   "include": [
-    "./src/instrumentation/**/*"
+    "./src/instrumentation/**/*",
+    "./src/shared/**/*",
   ]
 }
