--- a/tsconfig.worker.json
+++ b/tsconfig.worker.json
@@ -17,6 +17,7 @@
   "include": [
     "./vite-env.d.ts",
     "./worker-configuration.d.ts",
-    "./src/worker/**/*"
+    "./src/worker/**/*",
+    "./src/shared/**/*"
   ]
 }
