refactor: use one ruleset id

--- a/wrangler.dist.jsonc
+++ b/wrangler.dist.jsonc
@@ -12,6 +12,7 @@
     "SCRIPTS_BEHAVIOUR_PATH": "",
     "PUBLIC_KEY": "",
     "SECRET_KEY": "",
+    "FP_RULESET_ID": "",
     "PROTECTION_CONFIG": {
       "identificationPageUrls": [],
       "protectedApis": []
