--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
   "scripts": {
     "serve": "vite",
     "prepare": "husky && pnpm build:injector",
-    "build": "pnpm build:worker && pnpm build:injector",
+    "build": "pnpm build:worker && pnpm build:instrumentor",
     "build:worker": "vite build --config vite.worker.ts",
-    "build:injector": "vite build --config vite.instrumentation.ts",
+    "build:instrumentor": "vite build --config vite.instrumentor.ts",
     "lint": "eslint --ext .js,.ts --ignore-path .gitignore --max-warnings 0 .",
     "lint:fix": "pnpm lint --fix",
     "test": "vitest",
