--- a/tsconfig.instrumentor.json
+++ b/tsconfig.instrumentor.json
@@ -1,6 +1,7 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
+    "composite": true,
     "moduleResolution": "bundler",
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.instrumentation.tsbuildinfo",
     "lib": [
