--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,8 +7,7 @@
   },
   "exclude": [
     "dist",
-    "node_modules",
-    "**/*.test.ts"
+    "node_modules"
   ],
   "files": [],
   "references": [
