--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   },
   "config": {
     "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
+      "path": "./node_modules/cz-conventional-chaqngelog"
     }
   },
   "devDependencies": {
@@ -48,6 +48,7 @@
     "commitizen": "^4.3.1",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.57.1",
+    "happy-dom": "^19.0.1",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.0",
     "prettier": "^3.6.2",
