--- a/tsconfig.instrumentor.json
+++ b/tsconfig.instrumentor.json
@@ -14,6 +14,7 @@
     "isolatedModules": true
   },
   "include": [
-    "./src/instrumentor/**/*"
+    "./src/instrumentor/**/*",
+    "./src/shared/**/*",
   ]
 }
