--- a/wrangler.example.jsonc
+++ b/wrangler.example.jsonc
@@ -9,10 +9,8 @@
     "PUBLIC_KEY": "",
     "SECRET_KEY": "",
     "FP_RULESET_ID": "",
-    "PROTECTION_CONFIG": {
-      "identificationPageUrls": [],
-      "protectedApis": []
-    }
+    "PROTECTED_APIS": [],
+    "IDENTIFICATION_PAGE_URLS": []
   },
   "observability": {
     "enabled": true,
