--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@fingerprintjs/conventional-changelog-dx-team": "^0.1.0",
     "@fingerprintjs/eslint-config-dx-team": "^0.1.0",
     "@fingerprintjs/fingerprintjs-pro": "^3.12.2",
+    "@fingerprintjs/fingerprintjs-pro-server-api": "^6.10.0",
     "@fingerprintjs/prettier-config-dx-team": "^0.2.0",
     "@fingerprintjs/tsconfig-dx-team": "^0.0.2",
     "@types/node": "^24.5.2",
