--- a/tsconfig.instrumentor.json
+++ b/tsconfig.instrumentor.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "composite": true,
     "moduleResolution": "bundler",
+    "module": "ES2020",
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.instrumentation.tsbuildinfo",
     "lib": [
       "DOM",
