--- a/wrangler.example.jsonc
+++ b/wrangler.example.jsonc
@@ -3,6 +3,7 @@
   "main": "./src/worker/index.ts",
   "compatibility_date": "2025-09-15",
   "vars": {
+    "FP_REGION": "us",
     "MISSING_SIGNALS_RESPONSE": "",
     "FPJS_CDN_URL": "",
     "FPJS_INGRESS_BASE_HOST": "",
