--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "preview:react-spa": "cd test-apps/react-spa && pnpm preview",
     "dev": "vite serve --config vite.worker.ts --mode dev",
     "prepare": "husky && ./scripts/setup-wrangler.sh && pnpm build:instrumentor",
-    "build": "pnpm build:worker && pnpm build:instrumentor",
+    "build": "pnpm build:instrumentor && pnpm build:worker",
     "build:worker": "vite build --config vite.worker.ts",
     "build:instrumentor": "vite build --config vite.instrumentor.ts",
     "lint": "eslint --ext .js,.ts --ignore-path .gitignore --max-warnings 0 .",
