chore: remove variable

--- a/wrangler.example.jsonc
+++ b/wrangler.example.jsonc
@@ -11,8 +11,7 @@
     "SECRET_KEY": "",
     "FP_RULESET_ID": "",
     "PROTECTED_APIS": [],
-    "IDENTIFICATION_PAGE_URLS": [],
-    "FINGERPRINT_REGION": "us"
+    "IDENTIFICATION_PAGE_URLS": []
   },
   "observability": {
     "enabled": true,
