feat: handle fallback rule via FP_FAILURE_FALLBACK_ACTION variable

--- a/wrangler.example.jsonc
+++ b/wrangler.example.jsonc
@@ -11,7 +11,11 @@
     "SECRET_KEY": "",
     "FP_RULESET_ID": "",
     "PROTECTED_APIS": [],
-    "IDENTIFICATION_PAGE_URLS": []
+    "IDENTIFICATION_PAGE_URLS": [],
+    "FP_FAILURE_FALLBACK_ACTION": {
+      "type": "block",
+      "status_code": 403
+    }
   },
   "observability": {
     "enabled": true,
