--- a/wrangler.example.jsonc
+++ b/wrangler.example.jsonc
@@ -7,9 +7,9 @@
     "FPJS_CDN_URL": "",
     "FPJS_INGRESS_BASE_HOST": "",
     "WORKER_ROUTE_PREFIX": "W0cuVtnPs",
-    "PUBLIC_KEY": "<YOUR_FINGERPRINT_PUBLIC_KEY>",
-    "SECRET_KEY": "<YOUR_FINGERPRINT_SECRET_KEY>",
-    "FP_RULESET_ID": "<YOUR_FINGERPRINT_RULESET_ID>",
+    "PUBLIC_KEY": "FINGERPRINT_PUBLIC_KEY",
+    "SECRET_KEY": "FINGERPRINT_SECRET_KEY",
+    "FP_RULESET_ID": "FINGERPRINT_RULESET_ID",
     "PROTECTED_APIS": [
       {
         "method": "POST",
