--- a/wrangler.example.jsonc
+++ b/wrangler.example.jsonc
@@ -4,11 +4,11 @@
   "compatibility_date": "2025-09-15",
   "vars": {
     "FP_REGION": "us",
-    "FPJS_CDN_URL": "",
-    "FPJS_INGRESS_BASE_HOST": "",
+    "FP_CDN_URL": "",
+    "FP_INGRESS_BASE_HOST": "",
     "WORKER_ROUTE_PREFIX": "W0cuVtnPs",
-    "PUBLIC_KEY": "FINGERPRINT_PUBLIC_KEY",
-    "SECRET_KEY": "FINGERPRINT_SECRET_KEY",
+    "FP_PUBLIC_KEY": "FINGERPRINT_PUBLIC_KEY",
+    "FP_SECRET_KEY": "FINGERPRINT_SECRET_KEY",
     "FP_RULESET_ID": "FINGERPRINT_RULESET_ID",
     "PROTECTED_APIS": [
       {
