build: by default run tests without watch

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "build:instrumentor": "vite build --config vite.instrumentor.ts",
     "lint": "eslint --ext .js,.ts --ignore-path .gitignore --max-warnings 0 .",
     "lint:fix": "pnpm lint --fix",
-    "test": "vitest",
+    "test": "vitest --run",
+    "test:watch": "vitest",
     "test:coverage": "vitest --coverage",
     "test:attach": "vitest --inspect=9229 --no-file-parallelism",
     "wrangler:deploy": "pnpm build:worker && wrangler deploy",
