--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "@fingerprintjs/url-matcher": "^0.1.1",
     "@types/node": "^24.5.2",
     "@typescript-eslint/eslint-plugin": "6.19.1",
-    "@vitest/coverage-v8": "^3.2.4",
+    "@vitest/coverage-istanbul": "^3.2.4",
     "commitizen": "^4.3.1",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.57.1",
