chore: attempt to fix coverage-diff
Use a new pnpm script to execute vitest with coverage in the format
that the GH action expects.

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "test": "vitest --run",
     "test:watch": "vitest",
     "test:coverage": "vitest --coverage",
+    "test:coverage:ci": "vitest --coverage --reporter json --outputFile.json=report.json run",
     "test:attach": "vitest --inspect=9229 --no-file-parallelism",
     "wrangler:deploy": "pnpm build:worker && wrangler deploy",
     "wrangler:types": "wrangler types --strict-vars=false"
