feat: introduce agent processor script for forms

--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "dev": "vite serve --config vite.worker.ts --mode dev",
     "watch:instrumentor": "vite build --config vite.instrumentor.ts --watch",
     "prepare": "husky && ./scripts/setup-wrangler.sh && pnpm build:instrumentor",
-    "build": "pnpm build:instrumentor && pnpm build:worker",
+    "build": "pnpm build:instrumentor && pnpm build:agent-processor && pnpm build:worker",
     "build:worker": "vite build --config vite.worker.ts",
     "build:instrumentor": "vite build --config vite.instrumentor.ts",
+    "build:agent-processor": "vite build --config vite.agent-processor.ts",
     "lint": "eslint --ext .js,.ts --ignore-path .gitignore --max-warnings 0 .",
     "lint:fix": "pnpm lint --fix",
     "test": "vitest --run",
