feat: handle agent data injection into the agent processor script

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "preview:react-spa": "cd test-apps/react-spa && pnpm preview",
     "dev": "vite serve --config vite.worker.ts --mode dev",
     "watch:instrumentor": "vite build --config vite.instrumentor.ts --watch",
-    "prepare": "husky && ./scripts/setup-wrangler.sh && pnpm build:instrumentor",
+    "prepare": "husky && ./scripts/setup-wrangler.sh && pnpm build:instrumentor && pnpm build:agent-processor",
     "build": "pnpm build:instrumentor && pnpm build:agent-processor && pnpm build:worker",
     "build:worker": "vite build --config vite.worker.ts",
     "build:instrumentor": "vite build --config vite.instrumentor.ts",
