refactor: improve scripts structure

--- a/tsconfig.agent-processor.json
+++ b/tsconfig.agent-processor.json
@@ -15,8 +15,8 @@
     "isolatedModules": true
   },
   "include": [
-    "./src/agent-processor/**/*",
-    "./src/shared-scripts/**/*",
+    "./src/scripts/agent-processor/**/*",
+    "./src/scripts/shared/**/*",
     "./src/shared/**/*"
   ]
 }
