chore: rework coverage scripts to support all workflows
- docs-and-coverage expects to be able to run `pnpm test:coverage` and
  find the JSON output in `coverage/coverage-summary.json`
- update name of `coverage:ci` script to `coverage:diff` to reflect
  that it is the invocation used by the coverage-diff workflow.

--- a/.github/workflows/coverage-diff.yml
+++ b/.github/workflows/coverage-diff.yml
@@ -12,4 +12,4 @@ jobs:
       contents: read # for private repos
     uses: fingerprintjs/dx-team-toolkit/.github/workflows/coverage-diff.yml@v1
     with:
-      testScript: pnpm run test:coverage:ci
+      testScript: pnpm test:coverage:diff
