--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "commitizen": "^4.3.1",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.57.1",
+    "eslint-plugin-prettier": "^5.5.4",
     "happy-dom": "^19.0.1",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.0",
