feat: implement caching for agent loader and script responses

--- a/.env.dev
+++ b/.env.dev
@@ -1,2 +1,5 @@
 # Points to `preview` server from the react-spa
 VITE_ORIGIN=http://localhost:4173
+
+# Set to true to disable caching
+VITE_CACHE_DISABLED=false
