build: init terraform

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,5 @@ wrangler.jsonc
 # E2E Tests
 /e2e/test-results
 /e2e/.tmp
+/e2e/deploy/terraform/.terraform.lock*
+/e2e/deploy/terraform/.terraform
