--- a/package.json
+++ b/package.json
@@ -38,9 +38,11 @@
     }
   },
   "devDependencies": {
+    "@changesets/cli": "^2.29.7",
     "@cloudflare/vite-plugin": "^1.13.14",
     "@cloudflare/vitest-pool-workers": "^0.9.14",
     "@commitlint/cli": "^19.8.0",
+    "@fingerprintjs/changesets-changelog-format": "^0.2.0",
     "@fingerprintjs/commit-lint-dx-team": "^0.1.0",
     "@fingerprintjs/conventional-changelog-dx-team": "^0.1.0",
     "@fingerprintjs/eslint-config-dx-team": "^0.2.0",
