--- a/.github/workflows/analyze-commits.yml
+++ b/.github/workflows/analyze-commits.yml
@@ -9,3 +9,8 @@ jobs:
   analyze-commits:
     name: Generate docs and coverage report
     uses: fingerprintjs/dx-team-toolkit/.github/workflows/analyze-commits.yml@v1
+  preview-changeset:
+    name: Preview changeset
+    uses: fingerprintjs/dx-team-toolkit/.github/workflows/preview-changeset-release.yml@v1
+    with:
+      pr-title: ${{ github.event.pull_request.title }}
