ci: use scripts for changeset commands

--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "test:coverage:diff": "vitest run --coverage --reporter json --outputFile.json=report.json",
     "test:attach": "vitest --inspect=9229 --no-file-parallelism",
     "wrangler:deploy": "pnpm build:worker && wrangler deploy",
-    "wrangler:types": "wrangler types --strict-vars=false"
+    "wrangler:types": "wrangler types --strict-vars=false",
+    "changeset:publish": "HUSKY=0 changeset publish",
+    "changeset:version": "changeset version"
   },
   "lint-staged": {
     "*.{js,ts}": "pnpm run lint:fix"
