--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -9,8 +9,12 @@
   "commit": false,
   "fixed": [],
   "linked": [],
-  "access": "public",
+  "access": "restricted",
   "baseBranch": "main",
   "updateInternalDependencies": "patch",
-  "ignore": ["react-spa"]
+  "ignore": ["react-spa"],
+  "privatePackages": {
+    "version": true,
+    "tag": true
+  }
 }
