test: wait for website

--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -12,7 +12,7 @@ jobs:
         id: generate-domain
         run: |
           postfix=$(date +%s)
-          ECHO POSTFIX=$postfix >> $GITHUB_OUTPUT
+          echo POSTFIX=$postfix >> $GITHUB_OUTPUT
           echo SUBDOMAIN=test-$postfix >> $GITHUB_OUTPUT
       
       - name: 'Checkout project for pull_request_target trigger'
