--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "commitizen": "^4.3.1",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.57.1",
+    "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
     "happy-dom": "^19.0.1",
     "husky": "^9.1.7",
