--- a/e2e/.env.dist
+++ b/e2e/.env.dist
@@ -1,12 +1,26 @@
-CLOUDFLARE_ACCOUNT_ID=
+# Your Cloudflare API Token
 CLOUDFLARE_TOKEN=
 # Zone ID of the domain used for tests
 CLOUDFLARE_ZONE_ID=
 
+# Secret key for accessing Fingerprint Server API
 FP_SECRET_KEY=
+# Public key for using the agent
 FP_PUBLIC_KEY=
+# Optional ingress base host
 FP_INGRESS_BASE_HOST=
+# Optional CDN url
 FP_CDN_URL=
 
-TEST_DOMAIN=https://test.example.org
+# Top-level domain used in tests
+TEST_DOMAIN=example.org
+
+# Ruleset used for tests
 FP_RULESET_ID=
+
+# Unique test ID. It is used as part of the domain used for testing.
+TEST_ID=test
+
+# Note: Specific variables can be overriden for a specific test project, e.g:
+# This variable will be used for default-rule-allow project
+# DEFAULT_RULE_ALLOW_FP_RULESET_ID=
