--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "test:coverage": "vitest --coverage --reporter default --reporter json --outputFile.json=coverage/coverage-summary.json",
     "test:coverage:diff": "vitest run --coverage --reporter json --outputFile.json=report.json",
     "test:attach": "vitest --inspect=9229 --no-file-parallelism",
-    "wrangler:deploy": "pnpm build:worker && wrangler deploy",
+    "wrangler:deploy": "pnpm build && wrangler deploy",
     "wrangler:types": "wrangler types --strict-vars=false",
     "changeset:publish": "HUSKY=0 changeset publish",
     "changeset:version": "changeset version"
