--- a/e2e/.env.dist
+++ b/e2e/.env.dist
@@ -10,7 +10,7 @@ FP_PUBLIC_KEY=
 # Optional ingress base host
 FP_INGRESS_BASE_HOST=
 # Optional CDN url
-FP_CDN_URL=
+FP_CDN_HOST=
 
 # Top-level domain used in tests
 TEST_DOMAIN=example.org
