--- a/e2e/package.json
+++ b/e2e/package.json
@@ -11,6 +11,8 @@
     "@playwright/test": "^1.56.1",
     "@types/node": "^24.5.2",
     "dotenv": "^17.2.3",
+    "flow-cloudflare-worker": "workspace:*",
+    "@test-app/react-spa": "workspace:*",
     "ts-node": "^10.9.2",
     "tsx": "^4.20.6",
     "uuid": "^13.0.0"
