--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "vite": "^7.1.11",
     "vite-plugin-checker": "^0.10.3",
     "vitest": "^3.2.4",
-    "wrangler": "^4.50.0"
+    "wrangler": "^4.50.0",
+    "zod": "^4.1.13"
   }
 }
