--- a/package.json
+++ b/package.json
@@ -68,6 +68,6 @@
     "vite-plugin-checker": "^0.10.3",
     "vitest": "^3.2.4",
     "wrangler": "^4.50.0",
-    "zod": "^4.1.13"
+    "zod": "4.1.13"
   }
 }
