--- a/package.json
+++ b/package.json
@@ -39,6 +39,9 @@
       "path": "./node_modules/cz-conventional-changelog"
     }
   },
+  "dependencies": {
+    "zod": "4.1.13"
+  },
   "devDependencies": {
     "@changesets/cli": "^2.29.7",
     "@cloudflare/vite-plugin": "^1.13.14",
@@ -67,7 +70,6 @@
     "vite": "^7.1.11",
     "vite-plugin-checker": "^0.10.3",
     "vitest": "^3.2.4",
-    "wrangler": "^4.50.0",
-    "zod": "4.1.13"
+    "wrangler": "^4.50.0"
   }
 }
