chore: update .gitignore with dotenv file exclusion patterns

--- a/.gitignore
+++ b/.gitignore
@@ -19,8 +19,8 @@ docs
 wrangler.jsonc
 
 # Ignored dotenv files
-**/.env.*.local
-**/.env.local
+.env.*.local
+.env.local
 
 # E2E Tests
 /e2e/test-results
