chore: rename CLOUDFLARE_TOKEN to CLOUDFLARE_API_TOKEN in e2e/.env.dist for clarity

--- a/e2e/.env.dist
+++ b/e2e/.env.dist
@@ -1,5 +1,5 @@
 # Your Cloudflare API Token
-CLOUDFLARE_TOKEN=
+CLOUDFLARE_API_TOKEN=
 # Zone ID of the domain used for tests
 CLOUDFLARE_ZONE_ID=
 
