chore: rename `default-rule` to `fallback-action` prefixes based on review

--- a/e2e/.env.dist
+++ b/e2e/.env.dist
@@ -22,5 +22,5 @@ FP_RULESET_ID=
 TEST_ID=test
 
 # Note: Specific variables can be overriden for a specific test project, e.g:
-# This variable will be used for default-rule-allow project
-# DEFAULT_RULE_ALLOW_FP_RULESET_ID=
+# This variable will be used for ruleset-based-block project
+# RULESET_BASED_BLOCK_FP_RULESET_ID=
