chore: fix changesets config after test project renaming

--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -12,7 +12,7 @@
   "access": "restricted",
   "baseBranch": "main",
   "updateInternalDependencies": "patch",
-  "ignore": ["react-spa"],
+  "ignore": ["@test-app/react-spa"],
   "privatePackages": {
     "version": true,
     "tag": true
