chore: add `e2e` project to changesets ignore list

--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -12,7 +12,7 @@
   "access": "restricted",
   "baseBranch": "main",
   "updateInternalDependencies": "patch",
-  "ignore": ["@test-app/react-spa"],
+  "ignore": ["@test-app/react-spa", "e2e"],
   "privatePackages": {
     "version": true,
     "tag": true
