--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@fingerprintjs/commit-lint-dx-team": "^0.1.0",
     "@fingerprintjs/conventional-changelog-dx-team": "^0.1.0",
     "@fingerprintjs/eslint-config-dx-team": "^0.2.0",
+    "@fingerprintjs/fingerprintjs-pro-server-api": "^6.10.0",
     "@fingerprintjs/prettier-config-dx-team": "^0.2.0",
     "@fingerprintjs/tsconfig-dx-team": "^0.0.2",
     "@fingerprintjs/url-matcher": "^0.1.1",
