chore: mark e2e package as private in package.json

--- a/e2e/package.json
+++ b/e2e/package.json
@@ -1,5 +1,6 @@
 {
   "name": "e2e",
+  "private": true,
   "description": "E2E tests for Cloudflare Flow Worker",
   "scripts": {
     "test": "playwright test",
