feat: add `FP_LOG_LEVEL` environment variable to limit console logging
- Add a lightweight logging facade that wraps calls to
  `console`, skipping `console` calls based on the
  log level.
- Update the instrumentation scripts to use the logging
  facade in place of the direct calls to `console`
- Add eslint for instrumentation scripts to flag direct
  `console` invocations
- Adds optional `FP_LOG_LEVEL` environment variable to
  environment for worker
- Update worker to inject the level into the instrumentation
  script
- Add e2e test coverage for `FP_LOG_LEVEL`, including a new
  project that sets `FP_LOG_LEVEL` to debug

--- a/wrangler.example.jsonc
+++ b/wrangler.example.jsonc
@@ -22,7 +22,8 @@
     "FP_FAILURE_FALLBACK_ACTION": {
       "type": "block",
       "status_code": 403
-    }
+    },
+    "FP_LOG_LEVEL": "error"
   },
   "observability": {
     "enabled": true,
