--- a/.github/workflows/docs-and-coverage.yml
+++ b/.github/workflows/docs-and-coverage.yml
@@ -11,3 +11,5 @@ jobs:
     uses: fingerprintjs/dx-team-toolkit/.github/workflows/docs-and-coverage.yml@v1
     with:
       skip-docs-step: true
+      prepare-gh-pages-commands: |
+        mv coverage/lcov-report/* ./gh-pages/
