--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "lint:fix": "pnpm lint --fix",
     "test": "vitest --run",
     "test:watch": "vitest",
-    "test:coverage": "vitest --coverage --reporter default --reporter json --outputFile.json=coverage/coverage-summary.json",
+    "test:coverage": "vitest run --coverage",
     "test:coverage:diff": "vitest run --coverage --reporter json --outputFile.json=report.json",
     "test:attach": "vitest --inspect=9229 --no-file-parallelism",
     "wrangler:deploy": "pnpm build && wrangler deploy",
